# cpp5

2.论文撰写/: 1.点-球-圆柱投射覆盖.py  2.问题1关键时刻空中态势图.py  3.凸集局限与点集覆盖遮蔽判断.py  4.问题4中三机遮蔽时间轴示意图.py  main.tex  国赛画图ppt.pptx  国赛画图visio.vsdx
3.解答代码_solve1_2/: config.py  core_objects.py  geometry.py  optimizer.py  solve_problem_1.py  solve_problem_2.py  十个时间步长精度分析.py  模型离散化精度分析.py  离散化精度折线图.py  问题2收敛历史.csv  问题2迭代记录.py
4.probelm3_4代码/: CMakeLists.txt  README.md  README_CPP.md  boundary_calculator.cpp  boundary_calculator.hpp  config.cpp  core_objects.cpp  geometry.hpp  optimizer.cpp  optimizer.py  result1.xlsx  solve_problem_3.cpp  solve_problem_3.py  solve_problem_4.cpp  solve_problem_4.hpp  solve_problem_4.py  utils.py
4.解答代码_solve3_4/: CONVERSION_REPORT_4.md  analyze_excel_format.py  boundary_calculator.cpp  boundary_calculator.py  calculate_individual_times.py  config.hpp  core_objects.cpp  core_objects.hpp  fill_existing_results.py  generate_correct_results.py  generate_optimal_results.py  geometry.cpp  geometry.py  optimizer.cpp  optimizer.hpp  result1.xlsx  result2.xlsx  solve_problem_3.cpp  solve_problem_3.hpp  solve_problem_4.cpp  utils.py  video.py  write_results_directly.py  问题3迭代记录.py
5.问题五py转为cpp/: CMakeLists.txt  CONVERSION_REPORT.md  config.cpp  config.hpp  core_objects.cpp  core_objects.hpp  geometry.cpp  geometry.hpp  optimizer.cpp  optimizer.hpp  optimizer.py  solve_problem_5.cpp  solve_problem_5.py  task_allocator.py  utils.cpp  utils.hpp  utils.py
5.问题五py转为cpp2/: ADAPTIVE_DE_GUIDE.md  CMakeLists_HighPerformance.txt  CPP_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  README.md  adaptive_de.py  compare_optimizers.py  config.hpp.in  core_objects.hpp  cpp_benchmark.cpp  cpp_optimizer_wrapper.cpp  geometry.cpp  high_performance_adaptive_de.cpp  high_performance_adaptive_de.hpp  models.py  solve_problem_5.cpp  solve_problem_5.py  threat_assessor.cpp
5.问题五py转为cpp3/: CMakeLists_HighPerformance_Fixed.txt  CODE_REVIEW_REPORT.md  HIGH_PERFORMANCE_CPP_README.md  boundary_calculator.cpp  core_objects.cpp  core_objects.py  cpp_optimizer_wrapper.hpp  cpp_optimizer_wrapper_fixed.hpp  cpp_unit_tests.cpp  geometry.hpp  high_performance_adaptive_de_fixed.cpp  high_performance_demo.cpp  optimizer.py  solve_problem_5.hpp  strategy_calculator.hpp  task_allocator.py  test_adaptive_de.py  threat_assessor.hpp
5.问题五贪心+遗传/: CMakeLists.txt  README.md  boundary_calculator.cpp  boundary_calculator.hpp  boundary_calculator.py  config.hpp  core_objects.cpp  geometry.cpp  optimizer.cpp  optimizer.hpp  optimizer.py  solve_problem_5.cpp  solve_problem_5.py  solve_problem_5_new.cpp  strategy_calculator.cpp  strategy_calculator_q3.py  task_allocator.cpp  task_allocator.hpp  threat_assessor.cpp  threat_assessor.py  time.py  utils.py
